--- a/forkast-be/package.json
+++ b/forkast-be/package.json
@@ -29,14 +29,20 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/config": "^3.2.0",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/websockets": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.1",
+    "@nestjs/microservices": "^11.0.1",
+    "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "kafkajs": "^2.2.4",
     "nest-winston": "^1.10.2",
     "prisma": "^6.16.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "yahoo-finance2": "^2.13.3"
   },
