--- a/forkast-be/package.json
+++ b/forkast-be/package.json
@@ -24,21 +24,25 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/config": "^3.2.0",
+    "@nestjs/platform-socket.io": "^11.0.1",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^11.0.1",
-    "@nestjs/platform-socket.io": "^11.0.1",
-    "@nestjs/microservices": "^11.0.1",
-    "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^6.16.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node-rsa": "^1.1.4",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto-js": "^4.2.0",
     "kafkajs": "^2.2.4",
     "nest-winston": "^1.10.2",
+    "node-rsa": "^1.1.1",
     "prisma": "^6.16.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
