--- a/forkast-fe/package.json
+++ b/forkast-fe/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.12.2",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
